index css changed

--- a/audio_ebook/templates/index.html
+++ b/audio_ebook/templates/index.html
@@ -25,6 +25,10 @@
                 </ul>
             </div>
         </div>
+        <div class="head-context">
+            <img src="https://wallpapercave.com/wp/wp2036944.jpg" alt=""/>
+            <h2>A ROOM WITOUT BOOKS IS LIKE A BODY WITHOUT A SOUL. <br>- CICERO</h2>
+        </div>
         <div class="context">
             {% if search is not None %}
                 {% for catalog in catalog_list%}
