--- a/audio_ebook/static/css/context.css
+++ b/audio_ebook/static/css/context.css
@@ -1,3 +1,27 @@
+.head-context{
+    margin: 20px auto;
+    width: 90%;
+    height: 300px;
+    position: relative;
+}
+.head-context img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.9;
+    z-index: -1;
+}
+.head-context h2{
+    width: 50%;
+    position: absolute;
+    color: white;
+    top: 40%;
+    left: 10%;
+    font-size: 34px;
+    z-index: 0;
+}
 .context{
     width: 100%;
     height: 100vh;
