--- a/audio_ebook/templates/cataloglist.html
+++ b/audio_ebook/templates/cataloglist.html
@@ -48,6 +48,7 @@
                             </div>
                             <div class="book-info">
                                 <span class="book-title">{{book.title}}</span>
+                                <span class="book-author">{{book.author}}</span>
                             </div>
                         </div>
                     </a>
