--- a/audio_ebook/static/css/cataloglist.css
+++ b/audio_ebook/static/css/cataloglist.css
@@ -1,18 +1,20 @@
 .context{
-    width: 100%;
-    margin-top: 10px;  
-    background-color: rgb(0, 0, 0, 0.1);
+    width: 95%;  
+    height: auto;
+    padding: 10px;
+    background-color: white;
+    margin: 10px auto;
+    border-radius: 10px;
 }
 
 .context .context-title{
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(175, 174, 174);
     font-size: 22px;
-    font-weight: 600;
+    font-weight: 550;
     color: black;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 .context-title input:last-child{
     text-transform: uppercase;
@@ -31,19 +33,22 @@
 }
 .book{
     width: 200px;
-    height: 200px;
+    height: 250px;
     display: flex;
     flex-direction: column;
     margin: 0 5px;
-    padding: 20px 10px;
-    border: 1px solid rgba(94, 90, 90, 0.5);
-    align-items: center;
+    padding: 10px;
+    border: 1px solid rgba(94, 90, 90, 0.3);
+    border-radius: 5px;
+    box-shadow: 0 5px 5px 0 rgb(228, 226, 226);
+    text-align: left;
     overflow: hidden;
 }
 .book-poster img{
-    width: 150px;
+    width: 200px;
     height: 150px;
     object-fit: contain;
+    margin-bottom: 10px;
 }
 
 .book-info{
@@ -55,7 +60,11 @@
     font-size: 14px;
     font-weight: 550;
 }
-
+.book-info .book-author{
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 5px
+}
 .booklist::-webkit-scrollbar {
     display: none;
 }
