--- a/audio_ebook/static/css/main.css
+++ b/audio_ebook/static/css/main.css
@@ -3,7 +3,8 @@
 }
 body{
     font-size: 16px;
-    font-weight: 500;   
+    font-weight: 500;
+    background-color: rgb(235, 230, 230, 0.6);
 }
 a{
     text-decoration: none;
@@ -33,6 +34,7 @@ ul li:hover{
     align-items: center;
     width: 100%;
     height: 70px;
+    background-color: rgb(255, 255, 255)
 }
 .nav .nav-left{
     width: 50%;
@@ -46,7 +48,7 @@ ul li:hover{
     background-color: rgb(235, 230, 230);
     border: none;
     outline: none;
-    border-radius: 5px;
+    border-radius: 10px;
     width: 70%;
     padding: 0.5rem;
 }
