--- a/audio_ebook/templates/index.html
+++ b/audio_ebook/templates/index.html
@@ -59,6 +59,7 @@
                                 </div>
                                 <div class="book-info">
                                     <span class="book-title">{{book.title}}</span>
+                                    <span class="book-author">{{book.author}}</span>
                                 </div>
                             </div>
                         </a>
@@ -77,6 +78,7 @@
                                 </div>
                                 <div class="book-info">
                                     <span class="book-title">{{book.title}}</span>
+                                    <span class="book-author">{{book.author}}</span>
                                 </div>
                             </div>
                         </a>
