--- a/audio_ebook/templates/library.html
+++ b/audio_ebook/templates/library.html
@@ -3,7 +3,7 @@
 
     <head>
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}?{% now "U" %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/' %}?{% now "U" %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/cataloglist.css' %}?{% now "U" %}">
     </head>
     
     <body>
@@ -26,26 +26,25 @@
         </div>
         <div class="context">
             {% for list in library_list %}
-                <div class="list">
-                    <div class="catalog">
-                        {{list.catalog.catalog_title}}
+                <div class="context-title">
+                    <div class="context-name">
+                        {{ list.catalog.catalog_title }}
                     </div>
-                    <div class="books">
-                        {% for book in list.catalog.booklist.all %}
-                            <div class="booklist">
-                                <a href="/book/{{book.ISBN}}">
-                                    <div class="book">
-                                        <div class="book-poster">
-                                            <img src={{book.poster}} alt="" />
-                                        </div>
-                                        <div class="book-info">
-                                            <span class="book-title">{{book.title}}</span>
-                                        </div>
-                                    </div>
-                                </a>
+                </div>
+                <div class="booklist">
+                    {% for book in list.catalog.booklist.all %}
+                        <a href="/book/{{book.ISBN}}">
+                            <div class="book">
+                                <div class="book-poster">
+                                    <img src={{book.poster}} alt="" />
+                                </div>
+                                <div class="book-info">
+                                    <span class="book-title">{{book.title}}</span>
+                                    <span class="book-author">{{book.author}}</span>
+                                </div>
                             </div>
-                        {% endfor %}
-                    </div>
+                        </a>
+                    {% endfor %}
                 </div>
             {% endfor %}
         </div>
