templates and view changed

--- a/audio_ebook/static/css/cataloglist.css
+++ b/audio_ebook/static/css/cataloglist.css
@@ -10,8 +10,7 @@
 .context .context-title{
     display: flex;
     justify-content: space-between;
-    font-size: 22px;
-    font-weight: 550;
+    font-size: 24px;
     color: black;
     padding: 10px;
     margin-bottom: 5px;
@@ -26,7 +25,11 @@
     padding: 5px 20px;
     cursor: pointer;
 }
-
+.catalog{
+    border-bottom: 1px solid rgba(94, 90, 90, 0.3);
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+}
 .booklist{
     display: flex;
     overflow-x: scroll;
