--- a/audio_ebook/static/css/context.css
+++ b/audio_ebook/static/css/context.css
@@ -18,8 +18,8 @@
     width: 50%;
     position: absolute;
     color: white;
-    top: 40%;
-    left: 10%;
+    top: 30%;
+    left: 5%;
     font-size: 34px;
     z-index: 0;
 }
@@ -29,7 +29,9 @@
     padding: 10px;
     background-color: white;
     margin: auto;
+    border-bottom: 1px solid rgb(255, 0,0 );
     border-radius: 10px;
+    padding: 10px 0;
 }
 .context-title{
     width:90%;
@@ -41,7 +43,6 @@
     border-bottom: 1px solid rgb(0, 0, 0, 0.5);
     margin: 10px auto 10px auto;
 }
-
 .booklist{
     width: 100%;
     display: flex;
