--- a/audio_ebook/static/css/login.css
+++ b/audio_ebook/static/css/login.css
@@ -4,7 +4,7 @@
     background-size: 100%;
     background-position: center;
     height: 100vh;
-    width: 100wh;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
 }
@@ -57,7 +57,7 @@ p{
         overflow-y: hidden;
     }
     .user-form-main{
-        background-size: 100% 100%;
+        background-size: auto;
         background-position: left;
         justify-content: center;
     }
