login css changed

--- a/audio_ebook/static/css/login.css
+++ b/audio_ebook/static/css/login.css
@@ -1,9 +1,12 @@
 .user-form-main{
     background-image: url(https://images.unsplash.com/photo-1544716278-e513176f20b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTF8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80);
     background-repeat: no-repeat;
-    background-size: 100%;
-    background-attachment: fixed;  
-    background-position: center;
+    background-position: 0px 0px;
+    background-attachment: fixed;
+    -webkit-background-size: calc(100vw) calc(100vh);
+    -moz-background-size: calc(100vw) calc(100vh);
+    -o-background-size: calc(100vw) calc(100vh);
+    background-size: calc(100vw) calc(100vh);
     height: 100vh;
     width: 100%;
     display: flex;
