catalog subscribe button fix

--- a/audio_ebook/static/css/cataloglist.css
+++ b/audio_ebook/static/css/cataloglist.css
@@ -5,6 +5,7 @@
     background-color: white;
     margin: 10px auto;
     border-radius: 10px;
+    box-shadow: 0 0 3px 0 rgb(165, 159, 159);
 }
 
 .context .context-title{
@@ -26,9 +27,11 @@
     cursor: pointer;
 }
 .catalog{
-    border-bottom: 1px solid rgba(94, 90, 90, 0.3);
     padding-bottom: 20px;
     margin-bottom: 10px;
+}
+.catalog:not(:last-child){
+    border-bottom: 1px solid rgba(94, 90, 90, 0.3);
 }
 .booklist{
     display: flex;
@@ -43,7 +46,7 @@
     padding: 10px;
     border: 1px solid rgba(94, 90, 90, 0.3);
     border-radius: 5px;
-    box-shadow: 0 5px 5px 0 rgb(228, 226, 226);
+    box-shadow: -1px 0px 5px 3px rgba(171,171,171,0.69);
     text-align: left;
     overflow: hidden;
 }
