--- a/audio_ebook/static/css/context.css
+++ b/audio_ebook/static/css/context.css
@@ -31,6 +31,7 @@
     margin: auto;
     border-bottom: 1px solid rgb(255, 0,0 );
     border-radius: 10px;
+    box-shadow: 0 0 3px 0 rgb(165, 159, 159);
     padding: 10px 0;
 }
 .context-title{
@@ -59,7 +60,7 @@
     padding: 30px 20px;
     border: 1px solid rgba(94, 90, 90, 0.3);
     border-radius: 5px;
-    box-shadow: 0 5px 5px 0 rgb(228, 226, 226);
+    box-shadow: -1px 0px 5px 3px rgba(171,171,171,0.69);
     text-align: left;
     overflow: hidden;
 }
